--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
